--- a/ptf.css
+++ b/ptf.css
@@ -146,7 +146,8 @@ input[type="checkbox"]{
   z-index: -1;
   text-align: center;
   width: 100%;
-  color: #202020;
+  color: white;
+  margin-top: 40px;
 }
 .content .title .titles{
   font-size: 40px;
@@ -155,6 +156,7 @@ input[type="checkbox"]{
 }
 .title{
   vertical-align: top;
+  font-size: 40px;
 }
 .content p{
   font-size: 35px;
@@ -267,11 +269,26 @@ form input:focus + i{
 #rooster {
   background-color:  rgba(255, 255, 255, 0.5);
   padding-left: 20px;
-  padding-right: 20px;
+  padding-right: 10px;
+  margin: 10px;
 }
 .titles{
   padding-top: 400px;
   font-size: 40px;
   font-weight: 700;
   color: white;
+}
+.titul{
+  font-size: 50px;
+  font-weight: 900px;
+  color: white;
+}
+.locesion{
+  font-size: 20px;
+}
+#ifreem{
+}
+.tg{
+  margin-left: auto;
+  margin-right: auto;
 }
