--- a/ptf.css
+++ b/ptf.css
@@ -7,6 +7,7 @@
   box-sizing: border-box;
   outline: none;
   color: #fff;
+  /*Dit geld voor hele pagina*/
 }
 body{
   background-image: url("https://images.pexels.com/photos/956981/milky-way-starry-sky-night-sky-star-956981.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
@@ -15,25 +16,19 @@ body{
 .wrapper{
   position: fixed;
   top: 0;
-  /*left: -100%;*/
   right: -100%;
   height: 100%;
   width: 100%;
   background-image: url("https://images.pexels.com/photos/1072179/pexels-photo-1072179.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
-  /*background: linear-gradient(90deg, #f92c78, #4114a1);*/
-  /* background: linear-gradient(375deg, #1cc7d0, #2ede98); */
- /* background: linear-gradient(-45deg, #e3eefe 0%, #efddfb 100%);*/
   transition: all 0.6s ease-in-out;
 }
 #active:checked ~ .wrapper{
-  /*left: 0;*/
   right:0;
 }
 .menu-btn{
   position: absolute;
   z-index: 2;
   right: 20px;
-  /*left: 20px; */
   top: 20px;
   height: 50px;
   width: 50px;
@@ -42,10 +37,6 @@ body{
   border-radius: 50%;
   font-size: 20px;
   cursor: pointer;
-  /*color: #fff;*/
-  /*background: linear-gradient(90deg, #f92c78, #4114a1);*/
-  /* background: linear-gradient(375deg, #1cc7d0, #2ede98); */
- /* background: linear-gradient(-45deg, #e3eefe 0%, #efddfb 100%); */
   transition: all 0.3s ease-in-out;
 }
 .menu-btn span,
@@ -118,8 +109,6 @@ body{
   position: absolute;
   content: "";
   background: #fff;
-   /*background: linear-gradient(#14ffe9, #ffeb3b, #ff00e0);*/
-  /*background: linear-gradient(375deg, #1cc7d0, #2ede98);*/
   width: 100%;
   height: 100%;
   left: 0;
@@ -172,7 +161,7 @@ input[type="checkbox"]{
 }
 #active:checked ~ .wrapper ul li a{
 	transform: none;
-	transition-timing-function: ease, cubic-bezier(.1,1.3,.3,1); /* easeOutBackを緩めた感じ */
+	transition-timing-function: ease, cubic-bezier(.1,1.3,.3,1);
    transition-delay: .6s;
   transform: translateX(-100px);
 }
@@ -180,6 +169,7 @@ input[type="checkbox"]{
   color: #e88f1a;
   font-size: 40px;
   font-weight: 500;
+  /*dit geld voor alle plaatjes in de link tablad*/
 }
 .container{
   min-height: 72vh;
@@ -249,6 +239,7 @@ form button{
   font-weight: 800;
   cursor: pointer;
   border-radius: 3px;
+  /*inleverknop feedback*/
 }
 form input:focus,
 form textarea:focus{
@@ -269,8 +260,9 @@ form input:focus + i{
 #rooster {
   background-color:  rgba(255, 255, 255, 0.5);
   padding-left: 20px;
-  padding-right: 10px;
+  padding-right: 20px;
   margin: 10px;
+  /*margin van iframe metis rooster*/
 }
 .titles{
   padding-top: 400px;
